syntax = "proto3";

package user;
  
option go_package = ".";

message RegisterRequest {
    string username = 1;
    string phone = 2;
    string email = 3;
    string password = 4;    
}

message LoginRequest {
    string phone = 1;
    string password = 2;    
}

message AuthResponse {
    string token = 1;
}

service User {
    rpc Register(RegisterRequest) returns(AuthResponse);
    rpc Login(LoginRequest) returns(AuthResponse); 
}